# inotify-hide

./: CMakeLists.txt  README.md  inotify-hide.c  main.c
doc/: flawfinder  why-no-splint
inoh/: file.c  file.h  ino-hide-worker.c  ino-hide-worker.h  ino-hide.c  ino-hide.h  print.c  print.h  signal-handlers.c  signal_handlers.c  signal_handlers.h
scripts/: build.sh
